if(NOT STARVIEWER_CE AND NOT STARVIEWER_LITE)
    add_subdirectory(angiosubstraction)
    add_subdirectory(diffusionperfusionsegmentation)
    add_subdirectory(edemasegmentation)
    add_subdirectory(example)
    add_subdirectory(experimental3d)
    add_subdirectory(perfusionmapreconstruction)
    add_subdirectory(rectumsegmentation)
endif()
